// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden V1 Scenarios > Scenario 1: Simple Battle Setup (Opportunity) 1`] = `
{
  "activeId": null,
  "log": [
    "log.info.battleBegins",
  ],
  "mission": {
    "status": "in_progress",
    "type": "FightOff",
  },
  "participants": [
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_0",
      "luck": 0,
      "pos": "15,1",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [
        "scrap_pistol",
        "blade",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_1",
      "luck": 0,
      "pos": "16,1",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [
        "scrap_pistol",
        "blade",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_2",
      "luck": 0,
      "pos": "14,30",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_3",
      "luck": 0,
      "pos": "15,30",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_4",
      "luck": 0,
      "pos": "16,30",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_5",
      "luck": 0,
      "pos": "17,30",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
  ],
  "phase": "reaction_roll",
  "reactionRolls": [],
  "round": 1,
}
`;

exports[`Golden V1 Scenarios > Scenario 2: Movement Phase 1`] = `
{
  "activeId": null,
  "log": [
    "log.info.battleBegins",
  ],
  "mission": {
    "status": "in_progress",
    "type": "Access",
  },
  "participants": [
    {
      "actions": 1,
      "armor": undefined,
      "effects": [],
      "id": "participant_0",
      "luck": 0,
      "pos": "5,5",
      "status": "active",
      "stun": 0,
      "taken": "m:1,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_1",
      "luck": 0,
      "pos": "15,30",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_2",
      "luck": 0,
      "pos": "16,30",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_3",
      "luck": 0,
      "pos": "17,30",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "character",
      "weapons": [
        "colony_rifle",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_4",
      "luck": 0,
      "pos": "15,1",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [
        "auto_rifle",
        "blade",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_5",
      "luck": 0,
      "pos": "16,1",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [
        "military_rifle",
        "blade",
      ],
    },
    {
      "actions": 2,
      "armor": undefined,
      "effects": [],
      "id": "participant_6",
      "luck": 0,
      "pos": "17,1",
      "status": "active",
      "stun": 0,
      "taken": "m:0,c:0,d:0,i:0",
      "type": "enemy",
      "weapons": [
        "military_rifle",
        "blade",
      ],
    },
  ],
  "phase": "reaction_roll",
  "reactionRolls": [],
  "round": 1,
}
`;
